--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
               <li class="list-nav"><a href="#">Maps</a></li>
               <li><a href="#" class="rounded-pill"><button type="button" class="btn btn-warning btn-login">LOG iN</button></a></li>
               <div id="hamburger-menu">
-                <div class="bar">ewrgreg</div>
-                <div class="bar">rgrge</div>
-                <div class="bar">rgerhger</div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
               </div>
             </ul>
           </div>
